@@ -51,6 +51,7 @@
 			<Preference android:key="prefKeyResetToDefault"
 				android:summary="@string/prefResetToDefaultLong" android:title="@string/prefResetToDefault"
 				android:enabled="true"></Preference>
+			<EditTextPreference android:summary="@string/prefProfileSwitchLogSizeLong" android:title="@string/prefProfileSwitchLogSize" android:defaultValue="10" android:key="prefKeyProfileSwitchLogSize"></EditTextPreference>
 		</PreferenceScreen>
 		<PreferenceScreen android:title="@string/prefConfigurations"
 			android:key="prefKeyConfigurations">
