@@ -5,6 +5,7 @@ import android.os.Bundle;
 import android.widget.TextView;
 import ch.amana.android.cputuner.R;
 import ch.amana.android.cputuner.hw.CpuHandler;
+import ch.amana.android.cputuner.hw.PowerProfiles;
 import ch.amana.android.cputuner.hw.RootHandler;
 
 public class StatsActivity extends Activity {
@@ -23,9 +24,16 @@ public class StatsActivity extends Activity {
 		StringBuilder sb = new StringBuilder();
 		getTotalTransitions(sb);
 		getTimeInState(sb);
+		getProfileSwitches(sb);
 
 		tvStats.setText(sb.toString());
 		super.onResume();
+	}
+
+	private void getProfileSwitches(StringBuilder sb) {
+		sb.append(getString(R.string.label_profile_switches)).append("\n");
+		sb.append(PowerProfiles.getInstance().getProfileSwitchLog());
+
 	}
 
 	private void getTotalTransitions(StringBuilder sb) {
