@@ -1,6 +1,7 @@
 V 
 * features
-- 
+- autoload configurations
+- Profile switch log
 * bug fixes
 -
 
